--- a/Task Manager/client/package.json
+++ b/Task Manager/client/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://Dijeh08.github.io/Project-Portfolio",
   "name": "client",
+  "homepage": "https://dijeh08.github.io/task-manager-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -43,7 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "gh-pages": "^6.2.0",
     "globals": "^15.9.0",
-    "react-email": "3.0.1",
+    "react-email": "^3.0.2",
     "vite": "^5.4.8"
   }
 }
