--- a/Task Manager/client/package.json
+++ b/Task Manager/client/package.json
@@ -1,4 +1,5 @@
 {
+  
   "name": "client",
   "homepage": "https://dijeh08.github.io/task-manager-portfolio",
   "private": false,
@@ -7,6 +8,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
+    "clean": "rm -rf dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
